...
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/email_address_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>
    <LinearLayout
...
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:text="Log In"
            android:background="@drawable/roundedbutton"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createAccountButton"
            android:text="Create Account"
            android:background="@android:color/transparent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
