...
        android:id="@+id/curr_capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="17dp"
        android:fontFamily="sans-serif-light"
        android:text="Current Capacity"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/building_name" />

    <TextView
        android:id="@+id/max_capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-light"
        android:text="Max Capacity"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/occupants_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curr_capacity" />

    <TextView
...
