...
        android:layout_marginTop="12dp"
        android:text="Add Building"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/firestore_list"
        android:layout_width="408dp"
        android:layout_height="567dp"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
...
