...

                    <Button
                        android:id="@+id/okButtonProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:text="OK" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
...
            android:padding="0dp"
            android:textSize="14sp"
            android:textColor="#4D98A1"
            android:text="Restore Account"/>

        <Button
            android:id="@+id/button_edit_pic"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Profile Picture by Link"
            android:padding="0dp"
            android:textColor="#4D98A1"
...
